--- a/requirements.txt
+++ b/requirements.txt
@@ -43,6 +43,7 @@ packaging==24.2
 pandas==2.2.3
 parso==0.8.4
 pexpect==4.9.0
+phonenumbers==8.13.52
 pillow==11.0.0
 platformdirs==4.3.6
 polars==1.18.0
