--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,13 @@ appnope==0.1.4
 asttokens==3.0.0
 attrs==24.3.0
 certifi==2024.12.14
+cffi==1.17.1
 charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
+cryptography==44.0.0
 debugpy==1.8.11
 decorator==5.1.1
 docutils==0.21.2
@@ -42,6 +44,8 @@ opencv-python-headless==4.10.0.84
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
+pdfminer.six==20231228
+pdfplumber==0.11.4
 pexpect==4.9.0
 phonenumbers==8.13.52
 pillow==11.0.0
@@ -54,9 +58,11 @@ psutil==6.1.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
 pyarrow==18.1.0
+pycparser==2.22
 Pygments==2.18.0
 PyMatting==1.1.13
 pymdown-extensions==10.13
+pypdfium2==4.30.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
 PyYAML==6.0.2
