--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 anyio==4.7.0
 appnope==0.1.4
+aquarel==0.0.6
 asttokens==3.0.0
 attrs==24.3.0
 certifi==2024.12.14
@@ -9,13 +10,16 @@ click==8.1.8
 colorama==0.4.6
 coloredlogs==15.0.1
 comm==0.2.2
+contourpy==1.3.1
 cryptography==44.0.0
+cycler==0.12.1
 debugpy==1.8.11
 decorator==5.1.1
 docutils==0.21.2
 exceptiongroup==1.2.2
 executing==2.1.0
 flatbuffers==24.12.23
+fonttools==4.55.3
 h11==0.14.0
 humanfriendly==10.0
 idna==3.10
@@ -28,10 +32,12 @@ jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+kiwisolver==1.4.8
 lazy_loader==0.4
 llvmlite==0.43.0
 marimo==0.10.7
 Markdown==3.7
+matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mpmath==1.3.0
 narwhals==1.19.1
@@ -62,6 +68,7 @@ pycparser==2.22
 Pygments==2.18.0
 PyMatting==1.1.13
 pymdown-extensions==10.13
+pyparsing==3.2.0
 pypdfium2==4.30.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
@@ -74,6 +81,7 @@ rpds-py==0.22.3
 ruff==0.8.4
 scikit-image==0.25.0
 scipy==1.14.1
+seaborn==0.13.2
 six==1.17.0
 sniffio==1.3.1
 stack-data==0.6.3
