--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,8 @@ Markdown==3.7
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mpmath==1.3.0
+mypy==1.14.1
+mypy-extensions==1.0.0
 narwhals==1.19.1
 nest-asyncio==1.6.0
 networkx==3.4.2
@@ -88,6 +90,7 @@ stack-data==0.6.3
 starlette==0.42.0
 sympy==1.13.3
 tifffile==2024.12.12
+tomli==2.2.1
 tomlkit==0.13.2
 tornado==6.4.2
 tqdm==4.67.1
